# opencv-rust-recognition-card

./: .env  Cargo.toml  bitbucket-pipelines.yml  build.rs  ff
Card_Imgs/Suits/: tt.sh
libfoo/: CMakeLists.txt  foo.c
libfoo++/: CMakeLists.txt  DisplayImage.cpp  cv_services.cpp  foo.cpp
libhelper/: CMakeLists.txt  cv_services.cpp
src/: main.rs
